@@ -1,4 +1,5 @@
 current:
+  * fix Python Processor support for GIL, allowing asynchronous scanning
   * fix jpeg decoder skip handling
     - thanks to jarekczek for the patch!
   * rename dprintf macro to avoid conflicts (patch #3128538)
